[gd_scene load_steps=7 format=3 uid="uid://d3isoy6p7qtx6"]

[ext_resource type="FontFile" uid="uid://bgvt7v5cyhefk" path="res://Font/Sportive-Italic.ttf" id="1_rkppv"]
[ext_resource type="Script" path="res://scripts/level_menu.gd" id="2_52ybp"]
[ext_resource type="StyleBox" uid="uid://c6pjvu5c7ude3" path="res://sprites/normal_button.tres" id="2_yh5g8"]
[ext_resource type="Texture2D" uid="uid://m2g15cxpp7ik" path="res://sprites/SpaceHolder.png" id="3_h1ip0"]
[ext_resource type="StyleBox" uid="uid://cnxjit2cf2fql" path="res://levels_magazine/focusbutton.tres" id="3_qkibe"]

[sub_resource type="Theme" id="Theme_p6gfo"]
default_font = ExtResource("1_rkppv")

[node name="Level_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_p6gfo")
script = ExtResource("2_52ybp")

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 6000.0
offset_bottom = 4160.0
scale = Vector2(0.194181, 0.15655)
texture = ExtResource("3_h1ip0")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -121.0
offset_right = 76.0
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="lv1_button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
focus_neighbor_top = NodePath("../Main Menu")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Level 1  "
alignment = 0

[node name="lv2_button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Level 2"
alignment = 0

[node name="lv3_button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Level 3"
alignment = 0

[node name="lv4_button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Level 4"
alignment = 0

[node name="lv5_button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Level 5"
alignment = 0

[node name="lv6_button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Level 6"
alignment = 0

[node name="lv7_button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Level 7"
alignment = 0

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
focus_neighbor_bottom = NodePath("../lv1_button")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_yh5g8")
theme_override_styles/focus = ExtResource("3_qkibe")
text = "Menu
"
alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/lv1_button" to="." method="_on_lv_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lv2_button" to="." method="_on_lv_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lv3_button" to="." method="_on_lv_3_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lv4_button" to="." method="_on_lv_4_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lv5_button" to="." method="_on_lv_5_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lv6_button" to="." method="_on_lv_6_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lv7_button" to="." method="_on_lv_7_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
